Discussion add reference to literature

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -38,10 +38,9 @@ Our findings reveal that increasing vaccine coverage and per-capita health expen
 
 Furthermore, the distribution of mortality rates under five remains highly uneven. Developed countries such as Canada and the United States report mortality rates as low as 10 per 1,000 live births while developing nations—particularly in sub-Saharan Africa—experience rates exceeding 100 per 1,000 live births (@worldbank). This disparity highlights the urgent need for targeted interventions in high-mortality regions. The factors studied in this paper, such as vaccination and healthcare spending, are actionable and can be effectively improved in these regions through foreign aid and international collaboration.
 
-The remainder of this paper is organized as follows. @sec-data describes the data sources, key variables, and preprocessing steps, including transformations applied to address skewness and improve model validity. @sec-model outlines the modeling approach, including the choice of predictors, justification of the model structure, and Bayesian implementation. @sec-results presents the results of the analysis, highlighting the effects of each predictor on under-five mortality. Finally, @sec-diss discusses the implications of the findings, the limitations of the study, and recommendations for future research and policy interventions aimed at reducing child mortality globally.
+The estimand of this study is the effect of three predictors—food production index, vaccination coverage (DPT vaccine percentage), and per-capita health expenditure (log-transformed)—on the logarithm of the under-five mortality rate for each country in 2022. This analysis seeks to quantify the extent to which these factors contribute to variations in mortality rates across nations. By addressing these relationships, the study aims to identify potential intervention points for reducing preventable child deaths and achieving progress toward the Sustainable Development Goals for child survival.
 
-## Estimand
-The primary estimand of this study is the effect of three predictors—food production index, vaccination coverage (DPT vaccine percentage), and per-capita health expenditure (log-transformed)—on the logarithm of the under-five mortality rate for each country in 2022. This analysis seeks to quantify the extent to which these factors contribute to variations in mortality rates across nations. By addressing these relationships, the study aims to identify potential intervention points for reducing preventable child deaths and achieving progress toward the Sustainable Development Goals for child survival.
+The remainder of this paper is organized as follows. @sec-data describes the data sources, key variables, and preprocessing steps, including transformations applied to address skewness and improve model validity. @sec-model outlines the modeling approach, including the choice of predictors, justification of the model structure, and Bayesian implementation. @sec-results presents the results of the analysis, highlighting the effects of each predictor on under-five mortality. Finally, @sec-diss discusses the implications of the findings, the limitations of the study, and recommendations for future research and policy interventions aimed at reducing child mortality globally.
 
 # Data {#sec-data}
 
@@ -333,14 +332,34 @@ modelsummary(list("Mortality rate model" = model1), fmt = 4, statistic = c("({co
 
 # Discussion {#sec-diss}
 
-## Implications in reducing mortality rate
-The UN's Sustainable Development Goal (SDG) 3.2 aims to reduce the mortality rate of children under five to fewer than 25 per 1,000 live births by 2030 [@who2024]. While substantial progress has been achieved, reaching this target within the next six years presents significant challenges. Although global trends indicate a decline in child mortality rates, the pace of this reduction has slowed since 2015 [@who2024]. Moreover, as highlighted in @fig-mor-1, significant disparities persist between countries. Some nations have already surpassed the SDG target, with mortality rates well below the threshold, whereas others—primarily in low-income regions such as sub-Saharan Africa—experience rates four times higher than the target.
+## Overview
+The United Nations’ Sustainable Development Goal (SDG) 3.2 aims to reduce the mortality rate of children under five to fewer than 25 per 1,000 live births by 2030 [@who2024]. While substantial progress has been achieved globally, meeting this ambitious target within the remaining timeline of six years presents significant challenges. Although global trends indicate a decline in child mortality rates, the pace of this reduction has slowed since 2015 [@who2024].
 
-To achieve the SDG targets, urgent and focused international collaboration is required. Our findings underscore two critical areas for intervention: vaccine coverage and healthcare spending.
+A stark disparity persists across countries, as illustrated in @fig-mor-1. While some nations, especially high-income ones, have already surpassed the SDG target, others—predominantly in low-income regions such as sub-Saharan Africa—experience child mortality rates that are four times higher than the global goal.
 
-Vaccination programs have a demonstrable and significant impact on reducing child mortality. As shown in @fig-DPT-1, the distribution of DPT vaccine coverage is skewed left, indicating that while most countries maintain adequate immunization rates, certain nations lag considerably behind. WHO’s analysis of DPT vaccine coverage highlights that low-performing countries are concentrated in Africa, the Eastern Mediterranean, and South-East Asia regions [@who_dtp3_coverage]. These countries, predominantly developing nations, often face financial constraints that prevent them from funding vaccines for their newborn populations. Consequently, international aid is crucial to making DPT vaccines accessible and affordable in these regions.
+To achieve the SDG targets, concerted efforts are essential, particularly through targeted support from international organizations like the World Health Organization (WHO). However, this raises critical questions: Where should resources be allocated most effectively? How can countries with high child mortality rates achieve the greatest impact with limited resources?
 
-Healthcare spending presents a more complex challenge. It involves multiple factors, including a country’s economic capacity, infrastructure development, and access to healthcare services. Addressing these issues requires sustained, long-term efforts. Developed nations can play a pivotal role by providing financial support, sharing technological advancements, and facilitating knowledge transfer to strengthen healthcare systems in developing countries. Without addressing these systemic challenges, achieving equitable child survival rates will remain an unattainable goal.
+## Correlation V.S. Causality
+
+Numerous studies have explored the determinants of child mortality, consistently finding a negative correlation between mortality rates and macroeconomic indicators such as GDP [@ohare2013income] or education levels [@sartorius2014global]. However, many of these factors are not direct causes of child mortality.
+
+For instance, during the Great Recession, the United States experienced a reduction in mortality rates due to decreased air pollution following widespread factory closures [@finkelstein2024lives]. This demonstrates the importance of identifying underlying causes rather than focusing solely on broad economic indicators. In low-income countries, the primary drivers of high child mortality rates are often basic issues such as malnutrition and inadequate access to primary healthcare [@DOERR2022110860]. Addressing these root causes is crucial to achieving meaningful and sustainable improvements. 
+
+Our analysis identifies two factors with strong negative correlations to child mortality rates: DPT vaccine coverage and healthcare spending. However, it remains essential to determine whether these factors exert a direct influence or are proxies for other underlying variables.
+
+The DPT vaccine protects against three deadly diseases: diphtheria, pertussis (whooping cough), and tetanus (lockjaw). Administered in five doses starting at two months of age, this vaccine provides critical immunity for newborns [@cdc_dtap].
+
+In 1990, diphtheria, pertussis, and tetanus collectively caused approximately 160,000 deaths among children aged 1–4 years. By 2019, this number had decreased to 60,000, demonstrating the vaccine's impact [@gbd2019]. Nonetheless, disparities in vaccination rates persist, leaving many children vulnerable to preventable diseases. Studies indicate that children receiving zero doses of vaccines are at significantly higher risk of mortality [@karlsson2024prevalence]. Expanding vaccination coverage is a direct and cost-effective intervention to reduce child mortality and improve public health.
+
+Healthcare spending encompasses all expenditures on health-related goods and services within a given year, including both private and public spending [@worldbank_health_expenditure_us]. Research suggests that public healthcare spending has the most pronounced effect on reducing child mortality [@ray2020health], primarily by increasing access to trained healthcare professionals and improving maternity and neonatal care.
+
+Public healthcare systems are often funded through tax revenues, which are tied to broader economic performance and governance structures [@ray2020health]. While boosting overall tax revenues may be challenging, reallocating existing resources to prioritize public health can yield significant benefits. This approach is particularly relevant in countries where public spending on healthcare remains disproportionately low.
+
+## Conclusion
+
+Our study shows that reducing child mortality rate requires a dual focus on expanding vaccination coverage and optimizing healthcare spending. Vaccination programs, particularly for diseases like diphtheria, pertussis, and tetanus, represent a direct and impactful strategy for reducing child mortality. Simultaneously, enhancing public healthcare spending can address systemic issues such as inadequate maternal care and limited access to trained professionals.
+
+Efforts must be tailored to the specific needs and capacities of individual countries. International organizations can play a pivotal role by providing financial support, technical expertise, and policy guidance to countries with high child mortality rates. By prioritizing interventions with clear and measurable impacts, the global community can move closer to the goal of ensuring that no child dies from preventable causes.
 
 ## Limitation and next steps
 This study has several limitations that should be considered in future research. First, as noted in @sec-data-missing, data from several countries is unavailable. While these nations have minimal populations, excluding them introduces potential biases and raises ethical concerns by overlooking their unique challenges. Second, the most recent data used in this study is from 2022. Access to more current data sets would enable a more accurate and relevant analysis, reflecting recent developments in healthcare and child mortality trends.
