--- a/paper/references.bib
+++ b/paper/references.bib
@@ -188,5 +188,97 @@
     pages = {1--23},
     doi = {10.18637/jss.v103.i01},
   }
+  
+
+@article{sartorius2014global,
+  title = {Global infant mortality trends and attributable determinants – an ecological study using data from 192 countries for the period 1990–2011},
+  author = {Sartorius, Benn K. and Sartorius, Kurt},
+  journal = {Population Health Metrics},
+  volume = {12},
+  number = {1},
+  pages = {29},
+  year = {2014},
+  doi = {10.1186/s12963-014-0029-6},
+  url = {https://doi.org/10.1186/s12963-014-0029-6}
+}
+
+@article{ohare2013income,
+  title = {Income and child mortality in developing countries: a systematic review and meta-analysis},
+  author = {O’Hare, Bernadette and Makuta, Innocent and Chiwaula, Levison and Bar-Zeev, Nathan},
+  journal = {Journal of the Royal Society of Medicine},
+  volume = {106},
+  number = {10},
+  pages = {408--414},
+  year = {2013},
+  doi = {10.1177/0141076813489680},
+  url = {https://doi.org/10.1177/0141076813489680}
+}
+
+
+@article{finkelstein2024lives,
+  title = {Lives vs. Livelihoods: The Impact of the Great Recession on Mortality and Welfare},
+  author = {Finkelstein, Amy and Schilbach, Michael J. and Notowidigdo, Matthew F. and Zhang, Jintao},
+  year = {2024}
+}
+
+@article{DOERR2022110860,
+title = {Recessions and mortality: A global perspective},
+journal = {Economics Letters},
+volume = {220},
+pages = {110860},
+year = {2022},
+issn = {0165-1765},
+doi = {https://doi.org/10.1016/j.econlet.2022.110860},
+url = {https://www.sciencedirect.com/science/article/pii/S0165176522003342},
+author = {Sebastian Doerr and Boris Hofmann},
+keywords = {Crisis, Recession, Mortality, Child mortality, Economic development},
+}
+
+@misc{cdc_dtap,
+  title = {Diphtheria, Tetanus, and Pertussis (DTaP) Vaccine: What You Need to Know},
+  author = {{Centers for Disease Control and Prevention}},
+  year = {2024},
+  url = {https://www.cdc.gov/vaccines/hcp/vis/vis-statements/dtap.html#why-vaccinate},
+  note = {Accessed: 2024-11-28}
+}
+
+
+@misc{gbd2019,
+  author = {{Global Burden of Disease Collaborative Network}},
+  title = {Global Burden of Disease Study 2019 (GBD 2019) Results},
+  year = {2020},
+  publisher = {Institute for Health Metrics and Evaluation (IHME)},
+  address = {Seattle, United States},
+  url = {https://ghdx.healthdata.org/gbd-2019},
+  note = {Accessed: 2024-11-28}
+}
+
+@article{karlsson2024prevalence,
+  title = {Prevalence and Trends of Not Receiving a Dose of DPT-Containing Vaccine Among Children 12–35 Months: An Analysis of 81 Low- and Middle-Income Countries},
+  author = {Karlsson, Omar and Rajpal, Sunil and Johri, Mira and Kim, Rockli and Subramanian, SV},
+  journal = {Journal of Epidemiology and Global Health},
+  volume = {14},
+  number = {3},
+  pages = {460},
+  year = {2024},
+  month = {September},
+  doi = {10.1007/s44197-024-00294-6},
+  url = {https://link.springer.com/article/10.1007/s44197-024-00294-6}
+}
+
+@article{ray2020health,
+  title = {Health Expenditure, Longevity, and Child Mortality: Dynamic Panel Data Approach with Global Data},
+  author = {Ray, Devdatta and Linden, Mikael},
+  journal = {International Journal of Health Economics and Management},
+  volume = {20},
+  number = {1},
+  pages = {99--119},
+  year = {2020},
+  doi = {10.1007/s10754-019-09272-z},
+  url = {https://link.springer.com/article/10.1007/s10754-019-09272-z}
+}
+
+
+
 
 
